--- a/less/app.less
+++ b/less/app.less
@@ -762,7 +762,7 @@ span.side-project-name span {
 .link__footer{
   @media screen and (min-width: @screen-medium) {
     display: inline;
-    padding-right: 2em;
+    padding-right: 1.5em;
   }
 }
 
@@ -814,6 +814,12 @@ span.side-project-name span {
 // used to avoid orphaned words
 .nobr {
   white-space:nowrap;
+}
+
+// used to give feedback when email link is coppied
+.email-coppied-confirmation {
+  text-decoration: none;
+  color: @colour-white;
 }
 
 // animation
