--- a/less/app.less
+++ b/less/app.less
@@ -817,12 +817,38 @@ span.side-project-name span {
 }
 
 // used to give feedback when email link is coppied
-.email-coppied-confirmation {
-  text-decoration: none;
+// .email-coppied-confirmation {
+//   text-decoration: none;
+//   color: @colour-white;
+// }
+
+.email-bttn {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
   color: @colour-white;
+  background: none;
+  padding: 0.5em;
+  border: solid @colour-white 1px;
+  text-decoration: none;
+  display: inline-block;
+  width: 130px;
+  margin-left: -0.5em;
+  margin-right: 1.5em;
+
 }
 
-// animation
+.email-bttn:hover {
+  text-decoration: none;
+  text-align: center;
+  color: @colour-white;
+  border: solid @colour-white 1px;
+}
+
+.email-bttn:visited {
+  color: @colour-white;
+}
+// animation for 404 page
 
 .text-flicker-in-glow {
 	-webkit-animation: text-flicker-in-glow 3s linear 250ms both;
