minor padding fixes for the email button

--- a/less/app.less
+++ b/less/app.less
@@ -836,6 +836,12 @@ span.side-project-name span {
   margin-left: -0.5em;
   margin-right: 1.5em;
 
+  // Medium and large devices
+  @media screen and (min-width: @screen-medium) {
+    padding: 0.5em 1em 0.5em 1em;
+    margin-left: -1em;
+  }
+
 }
 
 .email-bttn:hover {
