--- a/css/app.css
+++ b/css/app.css
@@ -655,6 +655,12 @@ span.side-project-name span {
   margin-left: -0.5em;
   margin-right: 1.5em;
 }
+@media screen and (min-width: 700px) {
+  .email-bttn {
+    padding: 0.5em 1em 0.5em 1em;
+    margin-left: -1em;
+  }
+}
 .email-bttn:hover {
   text-decoration: none;
   text-align: center;
