--- a/less/app.less
+++ b/less/app.less
@@ -854,6 +854,11 @@ span.side-project-name span {
 .email-bttn:visited {
   color: @colour-white;
 }
+
+.email-bttn:focus {
+  outline: none;
+}
+
 // animation for 404 page
 
 .text-flicker-in-glow {
