finalised copy email button

--- a/css/app.css
+++ b/css/app.css
@@ -641,37 +641,70 @@ span.side-project-name span {
 .nobr {
   white-space: nowrap;
 }
-.email-bttn {
+.bttn {
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0px;
-  color: #ffffff;
-  background: none;
-  padding: 0.5em;
-  border: solid #ffffff 1px;
-  text-decoration: none;
   display: inline-block;
-  width: 130px;
-  margin-left: -0.5em;
+  padding: 0;
+  cursor: pointer;
+}
+.bttn:focus {
+  outline: none;
+}
+.bttn--email {
+  width: 150px;
+  margin-left: -0.8em;
   margin-right: 1.5em;
+  margin-bottom: 1.5em;
 }
 @media screen and (min-width: 700px) {
-  .email-bttn {
-    padding: 0.5em 1em 0.5em 1em;
-    margin-left: -1em;
+  .bttn--email {
+    width: 180px;
+    margin-left: -2em;
+    margin-right: 2.5em;
+    margin-bottom: 0;
   }
 }
-.email-bttn:hover {
-  text-decoration: none;
-  text-align: center;
+.bttn--almost-black {
   color: #ffffff;
+  background: #030303;
   border: solid #ffffff 1px;
+  -webkit-transition: background 0.7s ease;
+  -moz-transition: background 0.7s ease;
+  -o-transition: background 0.7s ease;
+  transition: background 0.7s ease;
 }
-.email-bttn:visited {
-  color: #ffffff;
+@media (any-hover: hover) {
+  .bttn--almost-black:hover {
+    color: #030303;
+    background: #ffffff;
+    border: solid #ffffff 1px;
+  }
 }
-.email-bttn:focus {
-  outline: none;
+.bttn__label {
+  display: inline-block;
+  font-size: 18px;
+  text-decoration: none;
+  padding-top: 0.7em;
+  padding-bottom: 0.7em;
+  width: inherit;
+  text-align: center;
+}
+.noselect {
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 .text-flicker-in-glow {
   -webkit-animation: text-flicker-in-glow 3s linear 250ms both;
