fixed IE issue where header was mangled on large screens

--- a/css/app.css
+++ b/css/app.css
@@ -161,6 +161,7 @@ p {
     vertical-align: top;
     padding-top: calc(5em);
     margin-left: 2em;
+    max-width: 380px;
   }
 }
 .intro__content {
