--- a/less/app.less
+++ b/less/app.less
@@ -189,6 +189,7 @@ p {
     vertical-align: top;
     padding-top: calc(2.5*@section-padding-top); //2.5 is to get the heading to align with the eyes
     margin-left: 2em;
+    max-width: 380px;
   }
 }
 
