--- a/css/app.css
+++ b/css/app.css
@@ -692,6 +692,39 @@ span.side-project-name span {
   width: inherit;
   text-align: center;
 }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 20000;
+  padding-top: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+}
+.modal__content {
+  background-color: #ffffff;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+.modal__close-button {
+  color: #0062C3;
+  float: right;
+  font-size: calc(45px);
+  font-weight: 700;
+  margin-top: -1em;
+}
+@media screen and (min-width: 700px) {
+  .modal__close-button {
+    margin-top: 0.3em;
+  }
+}
+.modal__close-button:hover {
+  color: #0062C3;
+  cursor: pointer;
+}
 .noselect {
   -webkit-touch-callout: none;
   /* iOS Safari */
