--- a/css/app.css
+++ b/css/app.css
@@ -26,13 +26,8 @@ p {
   background-color: #E0E0E0;
   transition: background-color 0.25s ease;
   padding: 0.01em 0em 0.01em 0em;
-  position: -webkit-sticky;
-  position: -moz-sticky;
-  position: -ms-sticky;
-  position: -o-sticky;
-  position: sticky;
-  z-index: 1000;
-  top: 0px;
+  width: 100%;
+  position: fixed;
 }
 @media screen and (min-width: 900px) {
   .nav {
@@ -59,8 +54,8 @@ p {
 }
 @media screen and (min-width: 900px) {
   .nav__list {
-    max-width: 900px;
     margin: auto;
+    max-width: 900px;
   }
 }
 .nav__item a {
