--- a/less/app.less
+++ b/less/app.less
@@ -36,14 +36,8 @@ p {
   background-color: @colour-medium-gray;
   transition: background-color 0.25s ease;
   padding: 0.01em 0em 0.01em 0em;
-
-  position: -webkit-sticky;
-  position: -moz-sticky;
-  position: -ms-sticky;
-  position: -o-sticky;
-  position: sticky;
-  z-index: 1000;
-  top: 0px;
+  width: 100%;
+  position: fixed;
 
   @media screen and (min-width: @screen-large) {
     padding: 1.5em 2em 1.5em 2em;
@@ -72,8 +66,8 @@ p {
   padding: 0;
 
   @media screen and (min-width: @screen-large) {
-    max-width: @screen-large;
     margin: auto;
+    max-width: @screen-large;
   }
 }
 
