--- a/less/variables.less
+++ b/less/variables.less
@@ -24,6 +24,7 @@
 @section-padding-bottom: 1em;
 @section-padding-first: 3em;
 @section-padding-last: 4em;
+@section-padding-top-of-page: 7.5em;
 
 @sub-section-padding-top: 1em;
 @sub-section-padding-bottom: 1.5em;
