--- a/css/app.css
+++ b/css/app.css
@@ -358,6 +358,61 @@ p {
     display: none;
   }
 }
+.my-work-item--with-side-image {
+  padding-top: 3em;
+  padding-bottom: 3em;
+  max-width: 100%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+@media screen and (min-width: 900px) {
+  .my-work-item--with-side-image {
+    max-width: 900px;
+    margin: auto;
+    padding-top: 8em;
+    padding-bottom: 10em;
+  }
+}
+@media screen and (max-width: 900px) {
+  .h2-heading__with-side-image--side-by-side {
+    display: none;
+  }
+}
+.h2-heading__with-side-image--vertically-stacked {
+  padding-bottom: 1em;
+}
+@media screen and (min-width: 900px) {
+  .h2-heading__with-side-image--vertically-stacked {
+    display: none;
+  }
+}
+.my-work-item__image {
+  width: 100%;
+  max-width: 35em;
+  display: inline-block;
+}
+@media screen and (min-width: 700px) and (max-width: 900px) {
+  .my-work-item__image {
+    max-width: 65em;
+  }
+}
+@media screen and (min-width: 900px) {
+  .my-work-item__image {
+    max-width: 24em;
+  }
+}
+.my-work-item__description--side-image {
+  display: inline-block;
+  padding-top: 2em;
+  vertical-align: top;
+}
+@media screen and (min-width: 900px) {
+  .my-work-item__description--side-image {
+    padding-left: 4em;
+    padding-top: 0;
+    max-width: 18em;
+  }
+}
 .my-work-item--with-desktop-browser {
   padding-top: 3em;
   padding-bottom: 0;
@@ -386,12 +441,6 @@ p {
     -webkit-filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.3));
     filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.3));
   }
-}
-.my-work-item__image {
-  display: inline-block;
-  padding-top: 1em;
-  vertical-align: top;
-  max-width: 15em;
 }
 .my-work-item_full-width-image--rubicon {
   padding: 0;
