--- a/less/app.less
+++ b/less/app.less
@@ -435,12 +435,75 @@ p {
 .h2-heading__with-ipad--vertically-stacked {
   padding-bottom: 1em;
 
-
-
   @media screen and (min-width: @screen-medium) {
     display: none;
   }
 }
+
+// a section with a side image
+
+.my-work-item--with-side-image {
+
+  padding-top: 3em;
+  padding-bottom: 3em;
+
+  max-width: 100%;
+  margin-left: @margin-left;
+  margin-right: @margin-right;
+
+  @media screen and (min-width: @screen-large) {
+    max-width: @screen-large;
+    margin: auto;
+    padding-top: 8em;
+    padding-bottom: 10em;
+  }
+}
+
+
+.h2-heading__with-side-image--side-by-side {
+
+  @media screen and (max-width: @screen-large) {
+    display: none;
+  }
+}
+
+.h2-heading__with-side-image--vertically-stacked {
+  padding-bottom: 1em;
+
+  @media screen and (min-width: @screen-large) {
+    display: none;
+  }
+}
+
+.my-work-item__image {
+  width: 100%;
+  max-width: 35em;
+  display: inline-block;
+
+  // Medium devices
+  @media screen and (min-width: @screen-medium) and (max-width: @screen-large) {
+    max-width: 65em;
+  }
+
+  // Large devices
+  @media screen and (min-width: @screen-large) {
+    max-width: 24em;
+  }
+}
+
+.my-work-item__description--side-image {
+  display: inline-block;
+  padding-top: 2em;
+  vertical-align: top;
+
+  // Large devices
+  @media screen and (min-width: @screen-large) {
+    padding-left: 4em;
+    padding-top: 0;
+    max-width: 18em;
+  }
+}
+
 
 // a section with a desktop browser
 
@@ -474,13 +537,6 @@ p {
     -webkit-filter: drop-shadow(0px 10px 20px @colour-shadow);
     filter: drop-shadow(0px 10px 20px @colour-shadow);
   }
-}
-
-.my-work-item__image {
-  display: inline-block;
-  padding-top: 1em;
-  vertical-align: top;
-  max-width: 15em;
 }
 
 // a section with a full width image
