--- a/less/app.less
+++ b/less/app.less
@@ -965,7 +965,7 @@ span.side-project-name span {
 }
 
 .modal--browser-warning {
-  display: block;    //hidden by default
+  display: none;    //hidden by default
 }
 
 .modal__content {
