--- a/css/app.css
+++ b/css/app.css
@@ -289,6 +289,39 @@ p {
 .image--with-caption {
   margin-bottom: 0;
 }
+.placeholder {
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+.placholder--loaded {
+  overflow: visible;
+}
+.placeholder img {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 1s linear;
+}
+.placeholder img.loaded {
+  opacity: 1;
+  overflow: visible;
+}
+.placeholder img.hidden {
+  opacity: 0;
+}
+.img-small {
+  filter: blur(50px);
+  -webkit-filter: blur(50px);
+  -moz-filter: blur(50px);
+  -o-filter: blur(50px);
+  -ms-filter: blur(50px);
+  /* this is needed so Safari keeps sharp edges */
+  transform: scale(1);
+}
 .my-work-item {
   padding-top: 2em;
   padding-bottom: 4em;
@@ -312,16 +345,18 @@ p {
   width: 100%;
   max-width: 24em;
   display: inline-block;
-  -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
 }
 @media screen and (min-width: 700px) and (max-width: 900px) {
   .my-work-item__image--ipad {
     max-width: 15em;
   }
 }
+.my-work-item__image--ipad-shadow {
+  -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
+}
 @media screen and (min-width: 900px) {
-  .my-work-item__image--ipad {
+  .my-work-item__image--ipad-shadow {
     -webkit-filter: drop-shadow(10px 15px 20px rgba(0, 0, 0, 0.3));
     filter: drop-shadow(10px 15px 20px rgba(0, 0, 0, 0.3));
   }
@@ -432,12 +467,18 @@ p {
   max-width: 65em;
   display: block;
   margin-top: 3em;
-  -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
-  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
 }
 @media screen and (min-width: 900px) {
   .my-work-item__image--browser-centred {
     margin-top: 4em;
+  }
+}
+.my-work-item__image--browser-centred-shadow {
+  -webkit-filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
+  filter: drop-shadow(3px 3px 5px rgba(0, 0, 0, 0.3));
+}
+@media screen and (min-width: 900px) {
+  .my-work-item__image--browser-centred-shadow {
     -webkit-filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.3));
     filter: drop-shadow(0px 10px 20px rgba(0, 0, 0, 0.3));
   }
