--- a/less/app.less
+++ b/less/app.less
@@ -355,6 +355,49 @@ p {
   margin-bottom: 0;
 }
 
+// --- FOR LAZY LOADING OF IMAGES
+
+.placeholder {
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.placholder--loaded {
+  overflow: visible;
+}
+
+.placeholder img {
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transition: opacity 1s linear;
+}
+
+.placeholder img.loaded {
+  opacity: 1;
+  overflow: visible;
+}
+
+.placeholder img.hidden {
+  opacity: 0;
+}
+
+
+
+.img-small {
+
+  filter: blur(50px);
+        -webkit-filter: blur(50px);
+        -moz-filter: blur(50px);
+        -o-filter: blur(50px);
+        -ms-filter: blur(50px);
+  /* this is needed so Safari keeps sharp edges */
+  transform: scale(1);
+}
 
 
 // --- MY WORK
@@ -390,13 +433,24 @@ p {
   max-width: 24em;
   display: inline-block;
 
-  -webkit-filter: drop-shadow(3px 3px 5px @colour-shadow);
-  filter: drop-shadow(3px 3px 5px @colour-shadow);
+  // -webkit-filter: drop-shadow(3px 3px 5px @colour-shadow);
+  // filter: drop-shadow(3px 3px 5px @colour-shadow);
 
   // Medium devices
   @media screen and (min-width: @screen-medium) and (max-width: @screen-large) {
     max-width: 15em;
   }
+
+  // Large devices
+  // @media screen and (min-width: @screen-large) {
+  //   -webkit-filter: drop-shadow(10px 15px 20px @colour-shadow);
+  //   filter: drop-shadow(10px 15px 20px @colour-shadow);
+  // }
+}
+
+.my-work-item__image--ipad-shadow {
+  -webkit-filter: drop-shadow(3px 3px 5px @colour-shadow);
+  filter: drop-shadow(3px 3px 5px @colour-shadow);
 
   // Large devices
   @media screen and (min-width: @screen-large) {
@@ -529,11 +583,16 @@ p {
   display: block;
   margin-top: 3em;
 
+  @media screen and (min-width: @screen-large) {
+    margin-top: 4em;
+  }
+}
+
+.my-work-item__image--browser-centred-shadow {
   -webkit-filter: drop-shadow(3px 3px 5px @colour-shadow);
   filter: drop-shadow(3px 3px 5px @colour-shadow);
 
   @media screen and (min-width: @screen-large) {
-    margin-top: 4em;
     -webkit-filter: drop-shadow(0px 10px 20px @colour-shadow);
     filter: drop-shadow(0px 10px 20px @colour-shadow);
   }
