--- a/less/app.less
+++ b/less/app.less
@@ -680,6 +680,7 @@ p {
 .my-work-item--side-projects-container {
   font-size: 0; //needed to remove the gap between images.
                 // Because of this, the sizes at this level and below must be in px, not em
+  line-height: 0;
   position: relative;
   padding-top: 72px;
 
