--- a/less/app.less
+++ b/less/app.less
@@ -1188,7 +1188,7 @@ span.side-project-name span {
   box-shadow: 0 1px 3px 0 rgba(0,0,0,0.20);
   height: 60px;
   z-index: 1;
-  padding: 0px 160px 0px ~"calc(10% + 30px)";
+  padding: 0px 160px 0px 20px;
 
   @media screen and (min-width: 600px) {
     align-items: baseline;
@@ -1206,12 +1206,14 @@ span.side-project-name span {
 
 .z-header__menu{
 
+  display: inline-flex;
+  margin-right: ~"calc(50% - 20px)";
 
   @media screen and (min-width: 600px) {
     display: inline-flex;
     color: blue;
-    text-decoration: underline;
     margin-right: 30px;
+    text-decoration: none;
   }
 
   @media screen and (min-width: @screen-large) {
@@ -1221,17 +1223,26 @@ span.side-project-name span {
 }
 
 .z-content{
+
   display: flex;
   height: 100%;
   background-color: #FBFBFB;
   justify-content: space-around;
 
-  padding: 50px 10% 50px 10%;
+  padding: 40px 0 40px 0;
+  margin-right: -10px;
+  margin-left: -10px;
+
+  @media screen and (min-width: 600px) {
+    padding: 50px 10% 50px 10%;
+    margin: 0;
+  }
 
 }
 .z-row{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 .z-col{
   display: flex;
@@ -1245,6 +1256,7 @@ span.side-project-name span {
   padding: 20px 30px 40px 30px;
   margin: 0 10px 20px 10px;
   min-height: 200px;
+  min-width: 250px;
 }
 
 // animation for 404 page
