fine-tuned header break-point transitions

--- a/css/app.css
+++ b/css/app.css
@@ -931,6 +931,7 @@ span.side-project-name span {
 .z-nav-header-content {
   display: flex;
   flex-direction: column;
+  background-color: #0D3161;
 }
 @media screen and (min-width: 900px) {
   .z-nav-header-content {
@@ -949,7 +950,7 @@ span.side-project-name span {
     min-width: 260px;
     height: 200vh;
     color: white;
-    padding: 75px 30px 0px 30px;
+    padding: 83px 30px 0px 30px;
     box-sizing: border-box;
   }
 }
@@ -976,29 +977,45 @@ span.side-project-name span {
     color: black;
     height: 200px;
     max-height: 200px;
+    min-height: 200px;
     padding: 75px 160px 0px 30px;
   }
 }
 @media screen and (min-width: 900px) {
   .z-header {
-    padding: 75px 160px 0px calc(10% + 30px);
+    padding: 75px 160px 0px calc(10% + 37px);
   }
 }
 .z-header__menu {
   display: inline-flex;
   margin-right: calc(50% - 20px);
+  padding-left: 10px;
+  min-width: 80px;
+  font-size: 14px;
 }
 @media screen and (min-width: 600px) {
   .z-header__menu {
     display: inline-flex;
     color: blue;
     margin-right: 30px;
+    padding-left: 0;
     text-decoration: none;
+    font-size: 18px;
   }
 }
 @media screen and (min-width: 900px) {
   .z-header__menu {
     display: none;
+  }
+}
+.z-header__heading {
+  display: inline-flex;
+}
+@media screen and (min-width: 600px) {
+  .z-header__heading {
+    font-size: 28px;
+    line-height: 36px;
+    font-weight: bold;
   }
 }
 .z-content {
@@ -1021,6 +1038,11 @@ span.side-project-name span {
   flex-direction: row;
   flex-wrap: wrap;
 }
+@media screen and (min-width: 1200px) {
+  .z-row {
+    flex-wrap: nowrap;
+  }
+}
 .z-col {
   display: flex;
   flex-direction: column;
@@ -1030,10 +1052,19 @@ span.side-project-name span {
   background-color: white;
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2);
   flex-grow: 1;
+  box-sizing: border-box;
   padding: 20px 30px 40px 30px;
   margin: 0 10px 20px 10px;
   min-height: 200px;
   min-width: 250px;
+}
+.z-card__heading {
+  font-size: 24px;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+.z-card__content {
+  font-size: 18px;
 }
 .text-flicker-in-glow {
   -webkit-animation: text-flicker-in-glow 3s linear 250ms both;
