--- a/less/app.less
+++ b/less/app.less
@@ -1297,6 +1297,21 @@ span.side-project-name span {
   font-size: 18px;
 }
 
+.YouTubeVideoWrapper{
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+
+.YouTubeVideoWrapper iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
+
 // animation for 404 page
 
 .text-flicker-in-glow {
