fixing up the vedas page background

--- a/less/app.less
+++ b/less/app.less
@@ -1312,6 +1312,12 @@ span.side-project-name span {
 	height: 100%;
 }
 
+.vedmas{
+  background-image: url(../resources/images/vedmas-snowflake-background.jpg);
+  background-repeat: repeat;
+
+}
+
 // animation for 404 page
 
 .text-flicker-in-glow {
