--- a/css/app.css
+++ b/css/app.css
@@ -1088,6 +1088,11 @@ span.side-project-name span {
   background-image: url(../resources/images/vedmas-snowflake-background.jpg);
   background-repeat: repeat;
 }
+.tennisChartWrapper iframe {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 .text-flicker-in-glow {
   -webkit-animation: text-flicker-in-glow 3s linear 250ms both;
   -moz-animation: text-flicker-in-glow 3s linear 250ms both;
