--- a/less/app.less
+++ b/less/app.less
@@ -1315,6 +1315,12 @@ span.side-project-name span {
 .vedmas{
   background-image: url(../resources/images/vedmas-snowflake-background.jpg);
   background-repeat: repeat;
+}
+
+.tennisChartWrapper iframe {
+	width: 100%;
+	height: 100%;
+  border: 0;
 
 }
 
